--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
   },
   "homepage": "https://github.com/conradz/rework-assets",
   "devDependencies": {
-    "tap": "~0.4.8",
-    "rework": "~0.20.2",
-    "rimraf": "~2.2.6",
-    "rework-npm": "~0.6.1"
+    "tap": "^0.4.12",
+    "rework": "^1.0.0",
+    "rimraf": "^2.2.8",
+    "rework-npm": "^1.0.0"
   },
   "dependencies": {
-    "mkdirp": "~0.5.0",
-    "rework-plugin-function": "^0.1.3"
+    "mkdirp": "^0.5.0",
+    "rework-plugin-function": "^1.0.1"
   }
 }
