Use directory when running JSHint instead of glob

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Copy all assets referenced to a folder",
   "main": "index.js",
   "scripts": {
-    "test": "jshint *.js && tap test.js"
+    "pretest": "jshint .",
+    "test": "tap test.js"
   },
   "repository": {
     "type": "git",
