--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Copy all assets referenced to a folder",
   "main": "index.js",
   "scripts": {
-    "pretest": "jshint .",
+    "pretest": "eslint .",
     "test": "tap test.js"
   },
   "repository": {
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/conradz/rework-assets",
   "devDependencies": {
+    "eslint": "^1.10.3",
     "jshint": "^2.9.1",
     "rework": "^1.0.1",
     "rework-npm": "^1.0.0",
@@ -35,5 +36,16 @@
   "dependencies": {
     "mkdirp": "^0.5.1",
     "rework-plugin-function": "^1.0.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true
+    },
+    "rules": {
+      "indent": 2,
+      "no-use-before-define": [2, "nofunc"],
+      "quotes": [2, "single"]
+    },
+    "extends": "eslint:recommended"
   }
 }
