--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rework-assets",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Copy all assets referenced to a folder",
   "main": "index.js",
   "scripts": {
@@ -43,8 +43,14 @@
     },
     "rules": {
       "indent": 2,
-      "no-use-before-define": [2, "nofunc"],
-      "quotes": [2, "single"]
+      "no-use-before-define": [
+        2,
+        "nofunc"
+      ],
+      "quotes": [
+        2,
+        "single"
+      ]
     },
     "extends": "eslint:recommended"
   }
